# fastdeploy

./: .gitignore  CODEOWNERS  Makefile  atlantis.yaml  main.py  models.py  pyproject.toml  services.yaml
atlantis/: README.md  config-enc.yaml  config.yaml  repo-config.yaml
terraform/envs/atlantis/: .terraform.lock.hcl  data.tf  iam.tf  keys.tf  locals.tf  main.tf  outputs.tf  provider.tf
terraform/envs/dev/: main.tf  provider.tf  variables.tf
terraform/envs/onboarding/: locals.tf  main.tf  outputs.tf  provider.tf  variables.tf
terraform/modules/iam/atlantis-role/: main.tf  outputs.tf
terraform/modules/network/sg-atlantis/: locals.tf  variables.tf
terraform/modules/network/sg-bastion/: locals.tf  variables.tf
terraform/modules/network/sg-webserver/: locals.tf  main.tf  outputs.tf  variables.tf
terraform/modules/network/vpc/: locals.tf  main.tf  outputs.tf  variables.tf
